syntax = "proto3";
package students;

option go_package = "coursework/api/proto;students";
import "google/protobuf/empty.proto";

service Students{
    rpc Get(google.protobuf.Empty) returns (GetResponse);
}

message StudentInfo {
    string FirstName = 1;
    string SecondName = 2;
    string Surname = 3;
    string Email = 4;
    float AverageRating = 5;
    string Type = 6;
    string Faculty = 7;
    string Group = 8;
}

message GetResponse{
    map<int64, StudentInfo> Students = 1;
}
